<resources>
    <string name="app_name">My App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="string_password">Password</string>
    <string name="acceder">Acceder</string>
    <string name="registrar">Registrar</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="Description">Description</string>
    <string name="aforo">Aforo</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="privado">Private</string>
    <string name="create">Create Event</string>
    <string name="location">Location</string>
    <string name="join">Unirse</string>
    <string name="add">Madrid, Es</string>
    <string name="updated_at">Updated At</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_24_c">24ºC</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="capacidad">Capacidad:</string>
</resources>